docs/en/v0.18.0/_sources/howtos/howtos.rst.txt
How-to guides
#############

This is a page of how-to guides. Guides are basically answers to the "How to ... with Cascade" type of questions.
They should be practical and may require some background knowledge of Cascade.

If you are new to the library, you may want to start from the :ref:`/tutorials/tutorials.rst` page.

Pipelines
*********

.. grid:: 1

    .. grid-item::
        .. card:: Build a pipeline
            :link: /howtos/pipeline_building.rst
            :link-type: ref

            How to build data processing pipelines with cascade.data module

    .. grid-item::
        .. card:: Track errors in a dataset
            :link: /howtos/track_dataset_errors.rst
            :link-type: ref

            How to find the source of and exception deep inside a pipeline

Experiment tracking
*******************

.. grid:: 1

    .. grid-item::
        .. card:: Track model training experiment
            :link: /howtos/model_training.rst
            :link-type: ref

            How to conduct experiments with Cascade

    .. grid-item::
        .. card:: Track logs
            :link: /howtos/track_logs.rst
            :link-type: ref

            How to save a log of a machine learning script

    .. grid-item::
        .. card:: Use a Trainer
            :link: /howtos/model_training_trainers.rst
            :link-type: ref

            How to make model training even easier with Trainers

    .. grid-item::
        .. card:: Track a file
            :link: /howtos/track_a_file.rst
            :link-type: ref

            How to log files along with saved model

CLI
***

.. grid:: 1

    .. grid-item::
        .. card:: How to use Cascade CLI
            :link: /howtos/cli.rst
            :link-type: ref

            Some things are more convenient when done in command line

    .. grid-item::
        .. card:: Query experiment results
            :link: /howtos/queries.rst
            :link-type: ref

            Just like with database, but without database

Integrations
************

.. grid:: 1

    .. grid-item::
        .. card:: scikit-learn
            :link: /howtos/sklearn.rst
            :link-type: ref

            Effectively track your sklearn experiments

    .. grid-item::
        .. card:: PyTorch

            :bdg-info:`To be written soon!`


Experiment management
*********************

.. grid:: 1

    .. grid-item::
        .. card:: Link Dataset to a Model
            :link: /howtos/links.rst
            :link-type: ref

            You can link anything to anything basically

    .. grid-item::
        .. card:: Comment on results of an experiment
            :link: /howtos/comments.rst
            :link-type: ref

            Filling bare numbers with some meaning and starting discussions

    .. grid-item::
        .. card:: Add Tags
            :link: /howtos/tags.rst
            :link-type: ref

            It is about building your own system


.. toctree::
    :maxdepth: 1
    :hidden:

    pipeline_building
    model_training
    track_logs
    model_training_trainers
    track_a_file
    track_dataset_errors
    cli
    queries
    sklearn
    links
    comments
    tags
